--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1733,7 +1733,51 @@ textarea.form-input::-webkit-resizer {
   }
 }
 
-
+/* CSS for centering input and black background */
+.password-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000; /* Màu đen với độ mờ 0.7 */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; /* Đảm bảo lớp này ở trên tất cả */
+  }
+  
+  .password-form {
+    background-color: #fff; /* Màu nền của form */
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Đổ bóng cho form */
+  }
+  
+  .password-form h2 {
+    margin-top: 0;
+  }
+  
+  .password-form input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+  }
+  
+  .password-form button {
+    width: 100%;
+    text-align: center;
+    padding: 10px 20px;
+    background-color: #4CAF50; /* Màu nút */
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
 
 
 
