update open link when click on image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1814,6 +1814,7 @@ textarea.form-input::-webkit-resizer {
 .thumbnail{
     width: 300px;
     margin-bottom: 10px;
+    cursor: pointer;
 }
 
 @media only screen and (max-width: 1760px) {
